
bin_PROGRAMS	= ool
ool_SOURCES	= grammar.y scanner.l ool.c
AM_CFLAGS	= -DDEBUG
AM_YFLAGS	= -d -t
ool_LDADD	= -ldl

#pkglib_LTLIBRARIES = socket.la math.la

#socket_la_SOURCES = socket.c
#socket_la_LDFLAGS = -avoid-version -module -shared -export-dynamic

#math_la_SOURCES = math.c
#math_la_LDFLAGS = -avoid-version -module -shared -export-dynamic
